--- a/css/styles.css
+++ b/css/styles.css
@@ -571,8 +571,6 @@ a {
 }
 
 .modal-btn {
-  background-color: transparent;
-  border: none;
   width: 24px;
   height: 24px;
   padding: 0;
@@ -580,6 +578,9 @@ a {
   right: 24px;
   top: 24px;
   border-radius: 50%;
+  display: flex;
+  align-items: center; 
+  j ustify-content: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
